Contain track image to avoid weird distortions

--- a/src/styles/layout/track.less
+++ b/src/styles/layout/track.less
@@ -11,6 +11,7 @@
 
   &__image {
     margin-bottom: 60px;
+    object-fit: contain;
     width: 100%;
   }
 
